load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "stateful-tally",
    hdrs = ["stout/stateful-tally.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_3rdparty_stout_atomic_backoff//:atomic-backoff",
        "@com_github_google_glog//:glog",
    ],
)
